--- a/config.json
+++ b/config.json
@@ -2,14 +2,14 @@
     "model" : {
         "min_input_size":       288,
         "max_input_size":       448,
-        "anchors":              [55,69, 75,234, 133,240, 136,129, 142,363, 203,290, 228,184, 285,359, 341,260],
-        "labels":               ["kangaroo"]
+        "anchors":              [68,131,107,194,183,164,107,329,277,132,181,237,248,197,160,370,227,266],
+        "labels":               ["0","1"]
     },
 
     "train": {
-        "train_image_folder":   "/home/andy/Desktop/github/kangaroo/images/",
-        "train_annot_folder":   "/home/andy/Desktop/github/kangaroo/annots/",
-        "cache_name":           "kangaroo_train.pkl",
+        "train_image_folder":   "/skymind/dataset/people_fall_down",
+        "train_annot_folder":   "/skymind/dataset/people_fall_down",
+        "cache_name":           "people_fall_down.pkl",
 
         "train_times":          8,
         "batch_size":           16,
@@ -26,7 +26,7 @@
         "class_scale":          1,
 
         "tensorboard_dir":      "logs",
-        "saved_weights_name":   "kangaroo.h5",
+        "saved_weights_name":   "people_fall_down.h5",
         "debug":                true
     },
 
